front page running fine

--- a/views/chartPage.handlebars
+++ b/views/chartPage.handlebars
@@ -1,2 +1,13 @@
 
-	<div>Hello there!</div>
+	<div id="backdrop">
+
+		<div id="dollarBorder"></div>
+	
+			<div id="explaination">The chart will go here.</div>
+
+			<div id="getHome">Take me back <a href="/">home</a>.</div>
+
+	</div>
+
+
+	<script src="/javascript/chartDetails.js"></script>
