--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -9,13 +9,16 @@ html, body {
 	padding: 0;
 }
 
-#backdrop {
+.backdrop {
 	width: 100vw;
-	height: 120rem;
 	background-color: rgb(230,233,202);
 }
 
-#dollarBorder {
+#mainHeight {
+	height: 130rem;	
+}
+
+.dollarBorder {
 	width: 100%;
 	height: 4rem;
 	background-image: url(../image/dollarBill.png);
@@ -118,7 +121,7 @@ html, body {
 	color: rgb(43,136,79);
 }
 
-#toChart {
+.toPage {
 	width: 50vw;
 	margin: 4rem 25vw 0 25vw;	
 	font-family: numTwo;
@@ -126,7 +129,7 @@ html, body {
 	text-align: center;
 }
 
-#chartButton {
+.toButton {
 	margin-top: 1rem;
 	width: 9.2rem;
 	height: 4rem;
