Adjusted data and display

--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -25,6 +25,7 @@ html, body {
 	background-repeat: repeat-x;
 	background-size: contain;
 	background-position: center;
+	margin-bottom: 3rem;
 }
 
 .flexCenterBoth {
