--- a/views/whenToBillsPage.handlebars
+++ b/views/whenToBillsPage.handlebars
@@ -3,7 +3,8 @@
 
 		<div class="dollarBorder"></div>
 	
-		<div class="explaination">Below is when the theory signaled going to Treasury Bills?</div>
+		<div class="explaination">When the theory signaled going to Treasury Bills,</div>
+		<div class="explaination">here are the previous yearly returns of each asset class for that month.</div>
 
 		<div class="dataGroup">
 			<div>
