Updated and down to two scenario's

--- a/views/afterBillsPage.handlebars
+++ b/views/afterBillsPage.handlebars
@@ -8,12 +8,12 @@
 		<div id="missedGroup" class="dataGroup">
 			<div>
 				{{#each justMissed}}
-					<div class="while">{{month}} {{year}}, {{plusMonth}} saw treasuries return {{returnT}}% vs. {{returnSP}}% for the S&P 500.</div>
+					<div class="while">{{month}} {{year}}, meant my return for {{plusMonth}} was {{returnT}}% while the  S&P did {{returnSP}}%.</div>
 				{{/each}}
 			</div>
 		</div>
 
-		<div id="avR">The average "next month" return was <span class="return">{{avReturn}}%</span> for the S&P.</div>
+		<div id="avR">The average S&P return for the missed month was <span class="return">{{avReturn}}%</span>.</div>
 
 		<div class="getHome">Take me back <a href="/">home</a>.</div>
 
