--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 	<link rel="shortcut icon" href="./assets/gemFavicon.ico" type="image/x-icon">
 
 	<link rel="stylesheet" type="text/css" href="./css/mainPage.css">
-	<link rel="stylesheet" type="text/css" href="./css/bothBillsPage.css">
+	<link rel="stylesheet" type="text/css" href="./css/allBillsPage.css">
 
 
 </head>
