--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -9,13 +9,11 @@ html, body {
 	padding: 0;
 }
 
-.backdrop {
+#backdrop {
 	width: 100vw;
+	height: auto;
+	min-height: 100vh;
 	background-color: rgb(230,233,202);
-}
-
-#mainHeight {
-	height: 130rem;	
 }
 
 .dollarBorder {
@@ -138,6 +136,7 @@ html, body {
 
 #bottomLine {
 	width: 90vw;
-	margin: 2rem 5rem 0 5rem;
-	border-bottom: 0.4rem solid rgb(43,136,79);
+	height: 4rem;
+	margin: 4rem 5rem 0 5rem;
+	border-top: 0.4rem solid rgb(43,136,79);
 }
