updated for June2020

--- a/views/whenToBillsPage.handlebars
+++ b/views/whenToBillsPage.handlebars
@@ -13,7 +13,7 @@
 						<div class="theYear">Year {{year}}</div>
 						<div class="eachData">
 							{{#each data}}
-								<div class="theData">{{month}} saw bonds return <span class="return">{{bReturn}}%</span> -- S&P 500: {{spReturn}}% -- World Index: {{wReturn}}%.</div>
+								<div class="theData">{{month}} saw bonds return <span class="return">{{bReturn}}%</span> -- S&amp;P 500: {{spReturn}}% -- World Index: {{wReturn}}%.</div>
 							{{/each}}
 						</div>
 					</div>
